# MultiPie

./: .buildinfo  .env  .gitignore  LICENSE  MANIFEST.in  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
_modules/: index.html
_static/: custom.css  custom.js  documentation_options.js  pdf_viewer.js
docs/: C3v.py  Makefile  README.md  Readme.md  _config.yml  _toc.yml  fmt_input.md  fmt_matrix.md  fmt_model.md  fmt_samb.md  graphene.py  index.md  plot_C3v.py  plot_graphene.py  references.bib  ver1.1.1.md  ver1.1.2.md  ver1.1.3.md  ver1.1.4.md  ver1.1.5.md  ver1.1.6.md  ver1.1.7.md  ver1.1.8.md  ver1.1.md
docs/example/: C3v.py  create_plot.py
docs/examples/: graphene.py  p_C3v.py  p_graphene.py  utility.py
docs/src/: api.md  api_core.md  api_harmonics.md  api_model.md  api_multipole.md  api_response_tensor.md  api_util.md  api_virtual_cluster.md  change_log.md  fmt_input.md  fmt_matrix.md  getting_started.md  group_doc.md  install.md  manual.md  overview.md  samb_construction.md  tech_note.md  use_matrix.md
multipie/: __init__.py  const.py
multipie/binary_data/: CharacterPGSet.pkl  ResponseTensorPGSet.pkl  SymmetryOperationGSet.pkl  VirtualClusterPGSet.pkl  WyckoffGSet.pkl  info.pkl
multipie/character/: character_pg.py  character_pg_set.py
multipie/clebsch_gordan/: clebsch_gordan_pg.py  clebsch_gordan_pg_set.py
multipie/core/: cmd.py  default_control.py  default_model.py  group.py  material_model.py  model_analyzer.py  multipie_info.py
multipie/data/: data_cartesian_to_ch_harmoncis.py  data_character_table.py  data_compatibility_relation.py  data_harmonics.py  data_harmonics_real.py  data_no_space_group.py  data_product_decomp.py  data_symmetry_operation_pg.py  data_symmetry_operation_sg.py  data_tag_harmonics_alias.py  data_tag_irrep.py  data_tag_point_group.py  data_tag_space_group.py  data_transform_matrix.py  data_virtual_cluster_real.py  data_wyckoff_pg.py  data_wyckoff_sg.py
multipie/group/: point_group.py  space_group.py
multipie/harmonics/: harmonics.py  harmonics_complex_pg.py  harmonics_complex_pg_set.py  harmonics_pg.py  harmonics_pg_set.py
multipie/model/: construct_model.py  create_model.py  create_view.py  material_model.py  multipie_manager.py  symmetry_adapted_model.py
multipie/response_tensor/: response_tensor_pg.py  response_tensor_pg_set.py
multipie/scripts/: create_binary.py  create_plot.py  create_samb.py  create_view.py  mp_analyze.py  mp_create.py  mp_create_samb.py  mp_create_samb_matrix.py  mp_create_samb_qtdraw.py  plot_utility.py
multipie/symmetry_operation/: symmetry_operation.py  symmetry_operation_g.py  symmetry_operation_g_set.py
multipie/tag/: tag.py  tag_group.py  tag_irrep.py  tag_list.py  tag_multipole.py  tag_response_tensor.py  tag_symmetry_operation.py  tag_wyckoff.py
multipie/util/: util.py  util_atomic_multipole.py  util_binary.py  util_constant.py  util_crystal.py  util_dict.py  util_gram_schmidt.py  util_harmonics.py  util_material_model.py  util_material_model_pdf.py  util_model_analyzer.py  util_pdf_latex.py  util_plot.py  util_response_tensor.py  util_samb.py  util_tag.py  util_wannier.py  util_wyckoff.py
multipie/virtual_cluster/: virtual_cluster_pg.py  virtual_cluster_pg_set.py
multipie/wyckoff/: wyckoff_g.py  wyckoff_g_set.py
others/: Makefile
others/examples/: ex_create_model.py
others/source/: application.rst  character.rst  conf.py  developer.rst  genindex.rst  group.rst  harmonics.rst  index.rst  model.rst  multipole.rst  response_tensor.rst  symmetry_operation.rst  tag.rst  virtual_cluster.rst  wyckoff.rst
others/technical_note/: cluster_samb.tex  harmonics.tex  response_tensor.tex  symmetry_operation.tex
others/tests/: create_mm_example.py  model_example.py  test_group.ipynb  test_group_m.ipynb  test_group_response_tensor.ipynb  test_mm.ipynb  test_mm_matrix.ipynb  test_mm_plot.ipynb  test_model_analyzer.ipynb
others/tools/: create_data.py  create_final_data.py  create_pdf.py  readme.md
src/: api.html  api_character.html  api_core.html  api_group.html  api_harmonics.html  api_model.html  api_multipole.html  api_response_tensor.html  api_symmetry_operation.html  api_tag.html  api_util.html  api_virtual_cluster.html  api_wyckoff.html  change_log.html  fmt_input.html  fmt_matrix.html  fmt_model.html  fmt_samb.html  getting_started.html  group_doc.html  install.html  manual.html  overview.html  samb_construction.html  tech_note.html  use_matrix.html
src/MPG/: No_1.1.1.html  No_1.2.2.html  No_10.1.32.html  No_10.2.33.html  No_10.3.34.html  No_11.1.35.html  No_11.2.36.html  No_11.3.37.html  No_11.4.38.html  No_11.5.39.html  No_12.1.40.html  No_12.2.41.html  No_12.3.42.html  No_12.4.43.html  No_12.5.129.html  No_13.1.44.html  No_13.2.45.html  No_13.3.46.html  No_13.4.47.html  No_13.5.130.html  (+137 more)
(+9924 files in other folders)
