[metadata]
name = multipie
author = Hiroaki Kusunose and Rikuto Oiwa
author_email = hiroaki.kusunose@gmail.com, ro.qp.07@gmail.com
version = attr: multipie.__version__
url = https://github.com/CMT-MU/MultiPie
description = A python library for crystallographic symmetry operations and Symmetry-Adapted Multipole Basis (SAMB).
long_description = file: README.md
long_description_content_type = text/markdown
keywords = group theory, condensed matter, materials science, basis
license = MIT

[options]
python_requires = >=3.8
install_requires =
    black
    joblib
    gmpy2
    click
    gcoreutils
packages = find:
include_package_data = True

[options.extras_require]
dev =
    sphinx
    sphinx-rtd-theme
    ipython
    qtdraw

[options.entry_points]
console_scripts =
    create_samb = multipie.scripts.create_samb:cmd
    create_binary = multipie.scripts.create_binary:cmd
